{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 456,
  "lineage": "70a2eb0c-7f43-7049-aafe-61a6dd74ce6f",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "route-to-nva-spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/routeTables/route-table-to-nva-spoke2/routes/route-to-nva-spoke2",
            "name": "route-to-nva-spoke2",
            "next_hop_in_ip_address": "172.16.0.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "rg-spoke2-28",
            "route_table_name": "route-table-to-nva-spoke2",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "route-to-nva-spoke2",
            "resource_group_name": "rg-spoke2-28",
            "route_table_name": "route-table-to-nva-spoke2",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_firewall.firewall",
            "azurerm_firewall_policy.firewall-policy",
            "azurerm_public_ip.pip-firewall",
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke2",
            "azurerm_route_table.route-table-to-nva-spoke2",
            "azurerm_subnet.snet-firewall",
            "azurerm_virtual_network.vnet-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route-table-to-nva-spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": false,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/routeTables/route-table-to-nva-spoke2",
            "location": "swedencentral",
            "name": "route-table-to-nva-spoke2",
            "resource_group_name": "rg-spoke2-28",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "route-to-nva-spoke2",
                "next_hop_in_ip_address": "172.16.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-workload"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "route-table-to-nva-spoke2",
            "resource_group_name": "rg-spoke2-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet-spoke2-aca",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.0.0/24"
            ],
            "default_outbound_access_enabled": false,
            "delegation": [
              {
                "name": "delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.App/environments"
                  }
                ]
              }
            ],
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-workload",
            "name": "subnet-spoke2-workload",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-spoke2-28",
            "virtual_network_name": "vnet-spoke2"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet-spoke2-workload",
            "resource_group_name": "rg-spoke2-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a",
            "virtual_network_name": "vnet-spoke2"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke2",
            "azurerm_virtual_network.vnet-spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet-spoke2-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.1.0/24"
            ],
            "default_outbound_access_enabled": false,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-vm",
            "name": "subnet-spoke2-vm",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-spoke2-28",
            "virtual_network_name": "vnet-spoke2"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet-spoke2-vm",
            "resource_group_name": "rg-spoke2-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a",
            "virtual_network_name": "vnet-spoke2"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke2",
            "azurerm_virtual_network.vnet-spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f23f2095-75fe-434d-881c-b862e94331ee",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke2",
            "location": "swedencentral",
            "name": "vnet-spoke2",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-spoke2-28",
            "subnet": [
              {
                "address_prefixes": [
                  "10.2.0.0/24"
                ],
                "default_outbound_access_enabled": false,
                "delegation": [
                  {
                    "name": "delegation",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action"
                        ],
                        "name": "Microsoft.App/environments"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-workload",
                "name": "subnet-spoke2-workload",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/routeTables/route-table-to-nva-spoke2"
              },
              {
                "address_prefixes": [
                  "10.2.1.0/24"
                ],
                "default_outbound_access_enabled": false,
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-vm",
                "name": "subnet-spoke2-vm",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-spoke2",
            "resource_group_name": "rg-spoke2-28",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet-peering-spoke2-to-hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-spoke2-28/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/virtualNetworkPeerings/vnet-peering-spoke2-to-hub",
            "name": "vnet-peering-spoke2-to-hub",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub-28/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "resource_group_name": "rg-spoke2-28",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-spoke2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke2",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-spoke2"
          ]
        }
      ]
    }
  ]
}